@@ -187,7 +187,7 @@ gap> SmallElements(J);
                 </ManSection>
 
 		<ManSection>
-                    <Attr Name="Conductor" Arg="NS" Label="for ideal of numerical semigroup"/>
+                    <Attr Name="Conductor" Arg="I" Label="for ideal of numerical semigroup"/>
                     <Func Arg="I" Name="ConductorOfIdealOfNumericalSemigroup"></Func>
                     <Description>
                         <A>I</A> is an ideal of a numerical semigroup.
@@ -199,6 +199,23 @@ gap> Conductor(10+s);
 15
 gap> ConductorOfIdealOfNumericalSemigroup(10+s);
 15
+]]></Example>
+                    </Description>
+                </ManSection>
+
+		<ManSection>
+                    <Attr Name="PseudoFrobenius" Arg="I" Label="for ideal of numerical semigroup"/>
+                    <Description>
+                        <A>I</A> is an ideal of a numerical semigroup.
+                        The output is the set of pseudo-Frobenius numbers of  <A>I</A>, that is the set <M><A>I</A>-M\setminus <A>I</A></M>, with <M>M</M> the maximal ideal of the ambient semigroup of <A>I</A> (see <Cite Key="gas-semigroups"></Cite>)
+
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroup(3,5,7);;
+gap> i:=4+s;;
+gap> PseudoFrobenius(i);
+[ 6, 8 ]
+gap> PseudoFrobenius(s)=PseudoFrobenius(0+s);
+true
 ]]></Example>
                     </Description>
                 </ManSection>
