@@ -1406,3 +1406,19 @@ MRREVIEWER = {P. G. Trotter},
        DOI = {10.7153/mia-11-14},
        URL = {https://doi.org/10.7153/mia-11-14},
 }
+
+@article {gas-semigroups,
+    AUTHOR = {D'Anna, Marco and Strazzanti, Francesco},
+     TITLE = {Almost canonical ideals and {GAS} numerical semigroups},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {49},
+      YEAR = {2021},
+    NUMBER = {8},
+     PAGES = {3534--3551},
+      ISSN = {0092-7872},
+   MRCLASS = {13H10 (20M14 20M25)},
+  MRNUMBER = {4283166},
+       DOI = {10.1080/00927872.2021.1900213},
+       URL = {https://doi.org/10.1080/00927872.2021.1900213},
+}
